# Vellum

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: pylint.yml
app/: __init__.py  database.py  main.py  models.py  services.py  templates_config.py
app/routes/: documents.py
app/templates/: _diff_result.html  base.html  editor.html  index.html
