[project]
name = "vellum"
version = "0.1.0"
description = "Smart Legal Document Manager"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]

[tool.setuptools]
packages = ["app"]

[dependency-groups]
dev = [
    "pylint>=4.0.5",
]
